--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ production_url : http://CAIsr.github.io/CAIsr.github.io
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
 markdown: kramdown
+theme: minima
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
