--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   twitter : nil
   feedburner : nil
 
-production_url : http://CAIsr.github.io/CAIsr.github.io
+production_url : https://CAIsr.github.io/CAIsr.github.io
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -50,7 +50,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://CAIsr.github.io/CAIsr.github.io
+  BASE_PATH : https://CAIsr.github.io/CAIsr.github.io
 
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
